testcases/syntax_errors/5_memory/4/test.asm
lw $t0, 1048577000000
